# gram-critic

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: ablation.yaml  critic.yaml  deploy_c06.yaml  deploy_c09.yaml  deploy_c09_frobenius.yaml  viz.yaml  viz_collapse.yaml  viz_compare.yaml  zoo.yaml
experiments/: clean_corruption.py
experiments/main/: amortized_routing.py  anti_collapse.py  critic_capacity2.py  critic_depth.py  critic_structured.py  gram_routing.py  gram_rule_zoo.py  logeuclid_control.py  metric_geometry.py
gram_critic/: __init__.py  __main__.py  ablation.py  config.py  critic.py  data.py  deploy.py  gram.py  harness.py  models.py  reg.py  regularizers.py  routing.py  rules.py  train.py  trajectory.py  viz.py  zoo.py
results/: README.md
scripts/: download_mnist.py
tests/: conftest.py  test_critic.py  test_gram.py  test_reg.py  test_routing.py
