[project]
name = "gram-critic"
version = "0.1.0"
description = "Learned activation-geometry regularizer using Set Transformer over activation Gram Matrix"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
# Only collect the unit suite — pytest's default ``*_test.py`` glob would otherwise try to
# import experiment scripts under experiments/ (e.g. gram_size_test.py), which run on import.
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["gram_critic*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
